# YoloDetect

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
