[tool.poetry]
name = "clip-imagesearch"
version = "0.1.0"
description = ""
authors = ["life"]
readme = "README.md"
packages = [{include = "clip_imagesearch"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.72"
torch = "^1.13.1"
transformers = "^4.26.1"
Pillow = "^9.4.0"
yolov5 = "^7.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
